compiler/tests/fa/errors/pure_print_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع فریاد(x صحیح۳۲) صحیح۳۲:
    چاپ(x)
    بازگشت x
پایان

تابع اصلی:
    چاپ(فریاد(2))
پایان
